src/main/kotlin/com/example/bak/global/error/dto/ErrorResponse.kt
package com.example.bak.global.error.dto

data class ErrorResponse(
    val status: Int,
    val message: String?
)